# hal

plugins/: .gitignore
plugins/generate_hre_task/: CMakeLists.txt
plugins/generate_hre_task/include/generate_hre_task/: generate_hre_task.h  plugin_generate_hre_task.h
plugins/generate_hre_task/sample/: adder.vcd  fulladder.hre
plugins/generate_hre_task/src/: generate_hre_task.cpp  plugin_generate_hre_task.cpp
plugins/gui/include/gui/module_model/: module_model.h
plugins/gui/include/gui/module_widget/: module_widget.h
plugins/gui/src/grouping/: grouping_color_serializer.cpp
plugins/gui/src/module_dialog/: module_dialog.cpp
plugins/gui/src/module_model/: module_model.cpp
plugins/gui/src/module_widget/: module_widget.cpp
plugins/simulator/netlist_simulator_controller/src/: netlist_simulator_controller.cpp
